<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.musicalstructure.RecentlyPlayed">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_height"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/list_recent_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:background="@color/searchLibrary"
                android:padding="@dimen/icon_padding"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_library_music_white_24dp" />

            <ImageView
                android:id="@+id/list_recent_albums"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:background="@color/listAlbums"
                android:padding="@dimen/icon_padding"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_album_white_24dp" />

            <ImageView
                android:id="@+id/list_recent_purchase"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:background="@color/storeLink"
                android:padding="@dimen/icon_padding"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_euro_symbol_white_24dp" />

            <ImageView
                android:id="@+id/list_recent_now"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:background="@color/nowPlaying"
                android:padding="@dimen/icon_padding"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_hearing_white_24dp" />

        </LinearLayout>

        <TextView
            style="@style/ScreenTitle"
            android:layout_margin="@dimen/title_margin"
            android:background="@color/recentlyPlayed"
            android:text="@string/recently_played" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/title_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/title_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/recently_played"
                    android:layout_height="@dimen/recently_played"
                    android:padding="@dimen/icon_padding"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_album_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/title_margin"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/title_margin"
                        android:gravity="center_vertical"
                        android:paddingTop="@dimen/icon_padding"
                        android:text="@string/recently_played_artist_1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/title_margin"
                        android:gravity="center_vertical"
                        android:text="@string/recently_played_track_1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/title_margin"
                        android:gravity="center_vertical"
                        android:text="@string/recently_played_album_1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/title_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/title_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/recently_played"
                    android:layout_height="@dimen/recently_played"
                    android:padding="@dimen/icon_padding"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_album_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/title_margin"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/title_margin"
                        android:gravity="center_vertical"
                        android:paddingTop="@dimen/icon_padding"
                        android:text="@string/recently_played_artist_2"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/title_margin"
                        android:gravity="center_vertical"
                        android:text="@string/recently_played_track_2"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/title_margin"
                        android:gravity="center_vertical"
                        android:text="@string/recently_played_album_2"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/title_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/title_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/recently_played"
                    android:layout_height="@dimen/recently_played"
                    android:padding="@dimen/icon_padding"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_album_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/title_margin"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/title_margin"
                        android:gravity="center_vertical"
                        android:paddingTop="@dimen/icon_padding"
                        android:text="@string/recently_played_artist_3"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/title_margin"
                        android:gravity="center_vertical"
                        android:text="@string/recently_played_track_3"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/title_margin"
                        android:gravity="center_vertical"
                        android:text="@string/recently_played_album_3"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/title_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/title_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/recently_played"
                    android:layout_height="@dimen/recently_played"
                    android:padding="@dimen/icon_padding"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_album_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/title_margin"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/title_margin"
                        android:gravity="center_vertical"
                        android:paddingTop="@dimen/icon_padding"
                        android:text="@string/recently_played_artist_4"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/title_margin"
                        android:gravity="center_vertical"
                        android:text="@string/recently_played_track_4"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/title_margin"
                        android:gravity="center_vertical"
                        android:text="@string/recently_played_album_4"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/title_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/title_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/recently_played"
                    android:layout_height="@dimen/recently_played"
                    android:padding="@dimen/icon_padding"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_album_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/title_margin"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/title_margin"
                        android:gravity="center_vertical"
                        android:paddingTop="@dimen/icon_padding"
                        android:text="@string/recently_played_artist_5"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/title_margin"
                        android:gravity="center_vertical"
                        android:text="@string/recently_played_track_5"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/title_margin"
                        android:gravity="center_vertical"
                        android:text="@string/recently_played_album_5"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/NextSteps"
            android:layout_margin="@dimen/title_margin"
            android:background="@color/nextSteps"
            android:text="@string/next_steps_recently_played" />

    </LinearLayout>

</ScrollView>