<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.musicalstructure.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_item_height"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/replay_icon"
                    android:layout_width="@dimen/list_icon_width"
                    android:layout_height="match_parent"
                    android:padding="@dimen/icon_padding"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_replay_black_24dp" />

                <TextView
                    android:id="@+id/replay_click_area"
                    style="@style/ClickAreaStyle"
                    android:background="@color/recentlyPlayed"
                    android:text="@string/recently_played" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_item_height"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/search_icon"
                    android:layout_width="@dimen/list_icon_width"
                    android:layout_height="match_parent"
                    android:padding="@dimen/icon_padding"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_library_music_black_24dp" />

                <TextView
                    android:id="@+id/search_click_area"
                    style="@style/ClickAreaStyle"
                    android:background="@color/searchLibrary"
                    android:text="@string/search_library" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_item_height"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/album_icon"
                    android:layout_width="@dimen/list_icon_width"
                    android:layout_height="match_parent"
                    android:padding="@dimen/icon_padding"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_album_black_24dp" />

                <TextView
                    android:id="@+id/album_click_area"
                    style="@style/ClickAreaStyle"
                    android:background="@color/listAlbums"
                    android:text="@string/list_albums" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_item_height"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/store_icon"
                    android:layout_width="@dimen/list_icon_width"
                    android:layout_height="match_parent"
                    android:padding="@dimen/icon_padding"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_euro_symbol_black_24dp" />

                <TextView
                    android:id="@+id/store_click_area"
                    style="@style/ClickAreaStyle"
                    android:background="@color/storeLink"
                    android:text="@string/store_link" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_width"
            android:padding="@dimen/title_padding"
            android:src="@drawable/title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_height"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/now_playing_icon"
                android:layout_width="@dimen/list_icon_width"
                android:layout_height="match_parent"
                android:padding="@dimen/icon_padding"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_hearing_black_24dp" />

            <TextView
                android:id="@+id/now_playing_click_area"
                style="@style/ClickAreaStyle"
                android:background="@color/nowPlaying"
                android:text="@string/now_playing" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>
