<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.musicalstructure.SearchLibrary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_height"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/list_search_recent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:background="@color/recentlyPlayed"
                android:padding="@dimen/icon_padding"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_replay_white_24dp" />

            <ImageView
                android:id="@+id/list_search_albums"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:background="@color/listAlbums"
                android:padding="@dimen/icon_padding"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_album_white_24dp" />

            <ImageView
                android:id="@+id/list_search_purchase"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:background="@color/storeLink"
                android:padding="@dimen/icon_padding"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_euro_symbol_white_24dp" />

            <ImageView
                android:id="@+id/list_search_now"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:background="@color/nowPlaying"
                android:padding="@dimen/icon_padding"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_hearing_white_24dp" />

        </LinearLayout>

        <TextView
            style="@style/ScreenTitle"
            android:layout_margin="@dimen/title_margin"
            android:background="@color/searchLibrary"
            android:text="@string/search_library" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_bar"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_string"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/title_margin"
                android:layout_marginRight="@dimen/title_margin"
                android:layout_weight="0.8"
                android:hint="@string/search_hint"
                android:inputType="textCapWords"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary" />

            <ImageView
                android:id="@+id/list_search_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:padding="@dimen/icon_padding"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_search_black_24dp" />

        </LinearLayout>

        <TextView
            style="@style/NextSteps"
            android:layout_margin="@dimen/title_margin"
            android:background="@color/nextSteps"
            android:text="@string/next_steps_search" />
    </LinearLayout>

</ScrollView>